Footer add and about changes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
         <h4>Mission Statement</h4>
         <p>Our goal is to serve the people of Tucson the best we can through a friendly atmosphere all around. Our clean and effective service let's us prove to you that we are dedicated to the satisfaction of anyone what walks in our door.</p>
     </main>
+    <footer>
+        <p>&copy; Wildcat Restaurant</p>
+        <p>For Website Support, Email: <a href="mailto:support@wildcatrestaurant.com">support@wildcatrestaurant.com</a></p>
+    </footer>
 </body>
 </html>
