Color and about change

--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
         <h1>Meet the Owners</h1>
         <h4>Peggy Smith</h4>
         <p>Peggy has lived in Tucson her entire life. She has always been very involved in community activities and wanted to bring her joy to the collegiate area.</p>
-        <p>Email: <a href="mailto:peggy@smith.com">peggy@smith.com</a>  Phone: (555) 555-5555</p>
+        <p>Email: <a href="mailto:peggy@smith.com">peggy@smith.com</a> Restaurant Phone: (555) 555-5555</p>
         <h4>Michael Brown</h4>
         <p>Michael came to Tucson as a college student and loved the city so much he never left! Majoring in Managament, he felt this would be a great opportunity to give back to the school he is an alum to.</p>
-        <p>Email: <a href="mailto:michael@brown.com">michael@brown.com</a>  Phone: (555) 555-5556</p>
+        <p>Email: <a href="mailto:michael@brown.com">michael@brown.com</a>  Restaurant Phone: (555) 555-5556</p>
     </main>
     <footer>
         <p>&copy; Wildcat Restaurant</p>
